--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -528,7 +528,7 @@ display: block;
 }
 .contentFour p{
   font-family: 'Montserrat-Light';
-  margin: 0;
+  margin: 0.8vw;
   font-size: 18px;
   color: rgb(112,112,112);
 }
