--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ body{
 .XlineOne{
   margin-top: 50%;
   transform: rotateZ(45deg);
-  background-color: rgb(239,106,70);
+  background-color: rgb(212,51,43);
   width: 100%;
   height: 10px;
   border-radius: 3px;
@@ -82,7 +82,7 @@ body{
 .XlineTwo{
   margin-top: -10px;
   transform: rotateZ(-45deg);
-  background-color: rgb(239,106,70);
+  background-color: rgb(212,51,43);
   width: 100%;
   height: 10px;
   border-radius: 3px;
@@ -194,12 +194,22 @@ video{
   font-size: 2.66vw;
   color: white;
 }
+.whiteStripe{
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  bottom: 0;
+  left: 0;
+  opacity: 0.8;
+  background-color: white;
+}
 /* black band */
 .blackBand{
-  background-color: black;
+  transition: 1s;
+  background-color: white;
   position: relative;
-  height: 11.85vw;
-  border-bottom: 1px solid rgb(0,0,0,0.2);
+  height: 9.629vw;
+  /* border-bottom: 1px solid rgb(0,0,0,0.2); */
 }
 .homeDesign{
   position: absolute;
@@ -226,19 +236,22 @@ video{
   top: 1.851vw;
   width: 4vw;
   height: 4vw;
+  opacity: 0.5;
 }
 .searchIcon:hover{
   cursor: pointer;
+  opacity: 1;
 }
 /* main */
 main{
+  transition: 1s;
   padding-top: 0.1px;
   top: 0;
   position: relative;
   overflow: visible;
   /* min-height: 80.07vw; */
   height: auto;
-  background-color: rgb(17,17,17);
+  background-color: white;
 }
 .narrowWrapper{
   position: absolute;
@@ -250,17 +263,25 @@ main{
   height: 100%
 }
 .narrowBG{
-  height: 133vw;
+  height: 200vw;
   width: 56vw;
   position: absolute;
-  background-color: rgb(243,37,37);
+  background-color: rgb(212,51,43);
   transform: rotate(18deg);
   top: -15vw;
-  left: -25vw;
+  left: -36vw;
+}
+.straightBG{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 10vw;
+  height: 100%;
+  background-color: rgb(212,51,43);
 }
 
 .webDevelopment{
-  top: 4vw;
+  top: 4.5vw;
   left: 5.5vw;
   position: absolute;
 }
@@ -277,6 +298,7 @@ main{
   font-family: 'Montserrat-Black';
 }
 .contentBox{
+  box-shadow: 0px 1.77vw 12.962vw 1.259vw rgba(0,0,0,0.2);
   position: relative;
   float: right;
   width: 92.592vw;
@@ -365,11 +387,11 @@ main{
 }
 .appMenuOptionsDiv:hover{
   cursor: pointer;
-  background-color: rgb(243,37,37) !important;
+  background-color: rgb(212,51,43) !important;
 }
 .appMenu>div:nth-child(1){
   border-top: none;
-  background-color: rgb(243,37,37);
+  background-color: rgb(212,51,43);
 }
 .socialMedia{
   margin-top: 3.5vw;
@@ -459,6 +481,16 @@ main{
   color: white;
   top: 1.2vw;
   text-align: center;
+}
+.pros{
+  color:#67c225;
+  font-weight: 900;
+  font-size: 23px;
+}
+.cons{
+  color:rgb(249,66,6);
+  font-weight: 900;
+  font-size: 23px;
 }
 /* speed */
 .speedIcon{
