--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@ video{
 /* black band */
 .blackBand{
   transition: 1s;
-  background-color: white;
+  background-color: #444444 ;
   position: relative;
   height: 9.629vw;
   /* border-bottom: 1px solid rgb(0,0,0,0.2); */
@@ -251,7 +251,7 @@ main{
   overflow: visible;
   /* min-height: 80.07vw; */
   height: auto;
-  background-color: white;
+  background-color: #444444 ;
 }
 .narrowWrapper{
   position: absolute;
